fix spacing AGAIN

--- a/style.css
+++ b/style.css
@@ -278,7 +278,8 @@ footer {
 
 @media all and (min-device-width: 0px) and (max-device-width: 480px) {
   #predict { display: none; }
-  #daniel { line-height: 3vw; font-size: 2.5vw;}
+  #daniel { line-height: 5vw; font-size: 4vw;}
+  #daniel { line-height: 4vw; font-size: 3vw;}
   #imagefilm {width: 100%; padding: none; display: block;}
   #imagecreds {display: none;}
   #creds {display: none;}
